--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDLXMmXF6587DFFIzVh77r5W9Wm_jWmStM" />
+            android:value="@string/map_key" />
 
     </application>
 
